db config updated db config updated for deployment

--- a/.env
+++ b/.env
@@ -1,9 +1,24 @@
 
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=root
-DB_NAME=leave_management_system
+# DB_HOST=localhost
+# DB_USER=root
+# DB_PASSWORD=root
+# DB_NAME=leave_management_system
+# JWT_SECRET=your_jwt_secret
+# EMAIL=deebalakshmi2019@gmail.com
+# EMAIL_PASS=pass2024
+# PORT=3000
+
+
+# Database name - u755099904_leave_manage
+# User name - u755099904_leave_manage
+# password - LaY/Bnt!j5
+# Host IP - 193.203.184.86
+
+DB_HOST=193.203.184.86
+DB_USER=u755099904_leave_manage
+DB_PASSWORD=LaY/Bnt!j5
+DB_NAME=u755099904_leave_manage
 JWT_SECRET=your_jwt_secret
 EMAIL=deebalakshmi2019@gmail.com
 EMAIL_PASS=pass2024
-PORT=3000
+PORT=3306
